Implemented jest configuration; fixed font and theme bundling issues.

--- a/projects/angular-editor/src/lib/angular-editor.component.html
+++ b/projects/angular-editor/src/lib/angular-editor.component.html
@@ -16,7 +16,7 @@
 </angular-editor-toolbar>
 
 <div
-    class="angular-editor-wrapper bookerly"
+    class="angular-editor-wrapper"
     [class.show-placeholder]="!(this.showPlaceholder | async)"
     [style.height]="height | async">
     <div
